--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prebuild": "npm run test && npm run build:clean",
     "build:clean": "rimraf ./build/*",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
+    "finesse": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.finesse.babel.js --color -p",
+    "finesse:watch": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.finesse.babel.js --color -p --watch",
     "analyze": "node ./internals/scripts/analyze.js",
     "start": "npm run start:tunnel",
     "start:tunnel": "cross-env NODE_ENV=development node server",
